# vseinstrumenti-parser

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: bootstrap.py
app/api/: deps.py  main.py  schemas.py
app/api/routers/: events.py  health.py  jobs.py  products.py  webhooks.py
app/core/: config.py  logging.py  security.py
app/db/: models.py  session.py
app/fetch/: base.py  factory.py  httpx_fetcher.py  playwright_fetcher.py  rate_limit.py
app/monitor/: diff.py  pipeline.py  schedule.py
app/parse/: extractor.py  types.py  urls.py
app/worker/: queue.py  scheduler.py  tasks.py
docker/: worker-entrypoint.sh
scripts/: pw_probe.py  verify_pipeline.py
tests/: test_diff.py  test_extractor.py  test_urls.py
tests/fixtures/: product_in_stock_discount.html  product_live_data_qa.html  product_out_of_stock.html
web/: index.html
